--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="col-md-4 mtb-1">
             <p class="text-left" >
-                I make brands stand out with amazing graphic designs such as  socia media flyers, carousels,
+                I make brands stand out with amazing graphic designs such as  social media flyers, carousels,
                 brand logo and much more. And I deliver on time. 
             </p>
         </div>
