--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p class="graphic">Social media, events, birthdays, church flyers and more</p>
 
         <p class="graphic" id="second"> Carousel Design</p>
-        <img src="carousel.png" class="finalpic">
+        <img src="carousel.png" class="img-fluid">
 
         <p class="graphic" id="second"> Logo</p>
         <img src="logo mockup.png" class="img-fluid">
