--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
         <img src="Flyer mockup.png" class="img-fluid" >
         <p class="graphic">Social media, events, birthdays, church flyers and more</p>
 
-        <p class="graphic" id="second"> Carousel Design</p>
-        <img src="carousel.png" class="finalpic">
-
+        <div class="finalpic">
+            <p class="graphic" id="second"> Carousel Design</p>
+            <img src="carousel.png" class="img-fluid">
+         </div>
         <p class="graphic" id="second"> Logo</p>
         <img src="logo mockup.png" class="img-fluid">
         </div>
