--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <footer id="contact">
         <div class="contact container">
-        <a class="footspace" href="tel:08142810677"> 08142810677</a>
+        <a class="footspace" href="tel:08142810677"> 08142810677</a><br>
         <img src="linkedin_social_icon.svg" class="mg-fluid">
         <a class="footspace" href="https://www.linkedin.com/in/kenneth-kalu-119388200"> Kenneth Kalu</a>
         <a class="footspace" href="mailto:kaluchibuikem11@gmail.com"> kaluchibuikem11@gmail.com</a>
